--- a/_projects/2022-04-30-Purr.md
+++ b/_projects/2022-04-30-Purr.md
@@ -1,6 +1,6 @@
 ---
 title: 'Purr - A Gesture Controlled Granular Synthesiser'
-subtitle: 'Instrument Development'
+subtitle: 'Musical Instrument Development'
 date: 2022-04-30 00:00:00
 description: 
 featured_image: '/images/jono/purr.jpg'
