--- a/_projects/2022-04-30-Purr.md
+++ b/_projects/2022-04-30-Purr.md
@@ -2,7 +2,7 @@
 title: 'Purr - A Gesture Controlled Granular Synthesiser'
 subtitle: 'Musical Instrument Development'
 date: 2022-04-30 00:00:00
-description: 
+description: Using MaxMSP and the Leap Motion sensor, I designed and built a granular synthesizer designed for expressive gestural play
 featured_image: '/images/jono/purr.jpg'
 ---
 ## Purr - A Gesture Controlled Granular Synthesiser
